--- a/wwwroot/jasmine/jasmine.html
+++ b/wwwroot/jasmine/jasmine.html
@@ -9,7 +9,12 @@
     <script src="jasmine.js"></script>
     <script src="jasmine.html.js"></script>
     <script src="jasmine.boot.js"></script>
+    <!-- Angular -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+    <script src="https://code.angularjs.org/1.3.15/angular-mocks.js"></script>
     <!-- Place any source files below -->
+    <script src="../app.js"></script>
     <!-- Place any spec files below -->
+    <script src="../specs/password-controller.spec.js"></script>
 </body>
 </html>
